--- a/Code-First-com-ASP.NET-MVC/Code-First-com-ASP.NET-MVC.csproj
+++ b/Code-First-com-ASP.NET-MVC/Code-First-com-ASP.NET-MVC.csproj
@@ -133,6 +133,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AlunoModel.cs" />
+    <Compile Include="Models\CursoModel.cs" />
+    <Compile Include="Models\UniversidadeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -150,8 +153,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Context\" />
     <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
