--- a/Code-First-com-ASP.NET-MVC/Code-First-com-ASP.NET-MVC.csproj
+++ b/Code-First-com-ASP.NET-MVC/Code-First-com-ASP.NET-MVC.csproj
@@ -130,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Context\EFContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -153,7 +154,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Context\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
   <PropertyGroup>
