Add Aluno Controller

--- a/Code-First-com-ASP.NET-MVC/Code-First-com-ASP.NET-MVC.csproj
+++ b/Code-First-com-ASP.NET-MVC/Code-First-com-ASP.NET-MVC.csproj
@@ -145,14 +145,25 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
+    <Content Include="Views\Aluno\Create.cshtml" />
+    <Content Include="Views\Aluno\Delete.cshtml" />
+    <Content Include="Views\Aluno\Details.cshtml" />
+    <Content Include="Views\Aluno\Edit.cshtml" />
+    <Content Include="Views\Aluno\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Context\EFContext.cs" />
+    <Compile Include="Controllers\AlunoController.cs" />
     <Compile Include="Controllers\UniversidadeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702010126100_Initial.cs" />
+    <Compile Include="Migrations\201702010126100_Initial.Designer.cs">
+      <DependentUpon>201702010126100_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AlunoModel.cs" />
     <Compile Include="Models\CursoModel.cs" />
     <Compile Include="Models\UniversidadeModel.cs" />
@@ -181,6 +192,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201702010126100_Initial.resx">
+      <DependentUpon>201702010126100_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
